updating readme with organizational notes/images

--- a/_sass/_bootstrap_customization.scss
+++ b/_sass/_bootstrap_customization.scss
@@ -95,7 +95,7 @@ pre.highlight > button:focus {
 // Custom tweaks
 
 img {
-  filter: drop-shadow(1px 4px 6px);
+  // filter: drop-shadow(1px 4px 6px);
   margin: 5px 0 10px 0;
 }
 
