--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="https://github.com/mcclatchy-southeast/security_for_sale">Get the data</a>
+          <a class="nav-link" href="https://github.com/mcclatchy-southeast/security_for_sale">Data</a>
         </li>
         <li class="nav-item dropdown">
           <!-- NOTE: newer versions of boostrap use data-bs-toggle instead of data-toggle -->
@@ -19,7 +19,14 @@
             <a class="dropdown-item" href="{{ site.baseurl }}/_pages/00-setting-up.html">Beginner</a>
             <a class="dropdown-item" href="{{ site.baseurl }}/_pages/01-intro-to-tidyverse.html">Intermediate</a>
             <a class="dropdown-item" href="{{ site.baseurl }}/_pages/02-data-viz.html">Advanced</a>
-            <div class="dropdown-divider"></div>
+            <!--<div class="dropdown-divider"></div>-->
+          </div>
+        </li>
+        <li class="nav-item dropdown">
+          <!-- NOTE: newer versions of boostrap use data-bs-toggle instead of data-toggle -->
+          <a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Resources</a>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="{{ site.baseurl }}/_pages/reading_list.html">Reading list</a>
             <a class="dropdown-item" href="{{ site.baseurl }}/_pages/glossary.html">Glossary</a>
           </div>
         </li>
