adding matching walkthrough

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,6 +19,7 @@
             <a class="dropdown-item disabled" >Beginner</a>
             <a class="dropdown-item" href="{{ site.baseurl }}/_pages/bg_setting_up_r.html">Setting up</a>
             <a class="dropdown-item" href="{{ site.baseurl }}/_pages/bg_clean_owners.html">Clean owner names</a>
+            <a class="dropdown-item" href="{{ site.baseurl }}/_pages/bg_matching_owners.html">Matching owner names</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item disabled" >Intermediate</a>
             <div class="dropdown-divider"></div>
